Minor changes are applied

--- a/Code/PGAForecastingML.ipynb
+++ b/Code/PGAForecastingML.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Important packages"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -19,6 +26,13 @@
     "from lightgbm import LGBMRegressor\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import StandardScaler, MinMaxScaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data\n"
    ]
   },
   {
@@ -107,6 +121,13 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# To drop unnecessary columns "
    ]
   },
   {
@@ -235,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +271,7 @@
     }
    ],
    "source": [
-    "# Boxplot'lar\n",
+    "# Boxplots\n",
     "plt.figure(figsize=(20, 15))\n",
     "sns.boxplot(data=df)\n",
     "plt.xticks(rotation=90)\n",
@@ -368,15 +389,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X ve y tanımla\n",
-    "X = df.drop('MainPGA_4', axis=1)  # 'hedef_degisken' yerine gerçek hedef değişken adını yaz\n",
-    "y = df['MainPGA_4']  # Hedef değişken\n",
+    "# Defining x and y\n",
+    "X = df.drop('MainPGA_4', axis=1)\n",
+    "y = df['MainPGA_4']\n",
     "\n",
-    "# Veriyi eğitim ve test setlerine ayırma\n",
+    "# Train and test sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
