--- a/Code/PGAForecastingML.ipynb
+++ b/Code/PGAForecastingML.ipynb
@@ -37,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/home/tdg/Desktop/codes/betul-codes/YapayZekaDestekliErkenUyariSistemi1/MachineLearningCodes/MergedData.csv')"
+    "df = pd.read_csv(r'C:\\Users\\caglar\\OneDrive\\Dokumente\\CT\\ODTÜ\\Education\\MSc\\Courses\\CENG562\\PROJECT\\CENG562-Project\\Data\\MergedData.csv')"
    ]
   },
   {
@@ -432,6 +432,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Models\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
@@ -565,6 +572,13 @@
     "\n",
     "# Save the results to a CSV file\n",
     "results_df.to_csv('model_results_with_train_test_comparison.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Results"
    ]
   },
   {
