Implementing the code on my PC

--- a/Code/PGAForecastingML.ipynb
+++ b/Code/PGAForecastingML.ipynb
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -357,13 +357,11 @@
     }
    ],
    "source": [
-    "# Z-skorunu hesaplama\n",
+    "# Outlier extraction using z-score\n",
     "df['z_score'] = (df['MainPGA_4'] - df['MainPGA_4'].mean()) / df['MainPGA_4'].std()\n",
     "\n",
-    "# Outlier'ları kaldırma\n",
     "df = df[df['z_score'].abs() < 3]\n",
     "\n",
-    "# Sonuç\n",
     "print(df)"
    ]
   },
